hello-world/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  labels:
    app.name: hello-world-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.name: hello-world-deployment
  template:
    metadata:
      labels:
        app.name: hello-world-deployment
    spec:
      containers:
        - name: hello-world
          image: "phyteldev.icp:8500/default/hello-world:v1"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
