hello-world/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-srv
  labels:
    app.name: hello-world-srv
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.name: hello-world-srv
